@@ -2,8 +2,6 @@
 ;
 ;On Atari 800 XL (Altirra emulator, PAL) this counts to 179704.
 
-
-timer@20:byte
 count:0..2'000'000
 
 "Counting 2 seconds..."
@@ -14,6 +12,3 @@ until timer = 100
   inc count
 
 "Counted to [count]."
-
-l@
-  goto l
